Revision history for {{$dist->name}}

{{$NEXT}}
       - Add the most excellent Helper::ResultSet::Union
       - namespace helpers

1.093501  2009-12-16 16:32:55 CST6CDT
       - Fix deps list

1.093500  2009-12-16 16:12:00 CST6CDT
       - Add IgnoreWantarray helper
       - Pull column def information from foreign tables
         for JoinTable helper, see pod in helper for details

0.093270 Mon Nov 23 10:45 2009
       - Add Random helper
       - Clean up as_virtual_view with recommendation from ijw and ribasushi

0.093140 Tue Nov 10 09:32 2009
       - Fix DBIC version dep
       - Get rid of some warnings from the test suite

0.093071 Tue Nov 03 20:53 2009
       - Fix package of VirtualView
       - Add test so that won't happen again

0.093070 Mon Nov 02 23:16 2009
       - Add virtual view method to clean SQL namespace
       - Add methods to generate has_many and many_to_many for join tables
       - Hopefully fix deps for real

0.093000 Sat Oct 26 19:40 2009
       - Add parent as a dependency
       - Super basic POD cleanup
       - Tighter Restrictions on the namespaces of parent classes

0.092970 Sat Oct 24 02:41 2009
       - Initial Release
